toggle is now an svg element. stylized text. all references refer to var currentYear

--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,17 @@
   font-size: .6em;
   fill: 'black';
 }
+
+.title {
+  font-size: 1.3em;
+  fill: 'black';
+}
+
+.toggle {
+  font-size: 40px;
+  cursor: pointer;
+}
+
+#white-pop-map {
+  text-align: center;
+}
