--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+body {
+ //font-family: Palatino,Palatino Linotype,Palatino LT STD,Book Antiqua,Georgia,serif; 
+ font-family: Georgia, Serif;
+}
+
 .label {
   font-size: .6em;
   fill: 'black';
@@ -14,5 +19,10 @@
 }
 
 #white-pop-map {
+  text-align: center;
+  padding-bottom: 1.5em;
+}
+
+.center {
   text-align: center;
 }
